--- a/appendices/teaching/index.html
+++ b/appendices/teaching/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>Teaching the Game | 地城世界 HTML SRD</title>
+  <title>遊戲教學 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -92,8 +92,8 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">附錄 <b class="caret"></b></a>
         <ul class="dropdown-menu">
            <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">冒險模組轉換</a></li>
-           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/teaching">進行教學</a></li>
-           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/npcs">NPCs</a></li>
+           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/teaching">遊戲教學</a></li>
+           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/npcs">速成NPC</a></li>
         </ul>
      </li>
    </li>
@@ -112,30 +112,42 @@
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
              
-<h1>Teaching the Game</h1>
-<p class="NoIndent">Since you’ve read this book it’s likely at some point you’ll be teaching the game to others, either experienced roleplayers or those new to the hobby. Throughout the design process we’ve had many chances to play with lots of different gamers from different backgrounds and there are a few things we’ve found work well for teaching the game.</p>
-<h2>Pitch It</h2>
-<p class="NoIndent">Before you play you’ll likely be explaining the game to your new players (don’t just spring it on them, that’s not cool). We call that the pitch: it’s explaining why you want to play Dungeon World and why you think they’ll like it.</p>
-<p>First and most importantly: put it in your own words. We can’t give you a script because the best way to get people excited about the game is to share your honest excitement. There are, however, some things you might want to touch on.</p>
-<p>With first-time roleplayers it’s best to focus on what roleplaying means in Dungeon World. Tell them what they’ll be doing (portraying a character) and what you’ll be doing (portraying the world around them). Mention the general conceit (adventurers and adventure). It’s usually a good idea to mention the role of the rules too, how they’re there to drive the action forward in interesting ways.</p>
-<p>With folks who’ve played RPGs before, especially those who’ve played other fantasy adventure games, you can focus more on what makes Dungeon World different from other similar games. Ease-of-play, the way the rules just step in at the right times, and the fast pace are all things that experienced roleplayers often appreciate.</p>
-<p>No matter the audience, don’t just pitch Dungeon World, pitch the game you’re going to run. If this is going to be a trip into the city sewers, tell them that right up front. If there’s an evil cult to be stopped that should be part of your description. The interaction between you, the players, and the rules will create all kinds of interesting secrets later on; your pitch should honestly portray the game you intend to run.</p>
-<h2>Present the Classes</h2>
+<h1>遊戲教學</h1>
+<p class="NoIndent">既然你已經熟讀過這本規則，那麼負責教導其他人如何遊玩這款遊戲的重責大人，就很有可能會落在你身上，無論對象是有過經驗的角色扮演玩家、或是那些第一次接觸這個嗜好的新手都一樣。在設計這款遊戲的整個過程中，我們有很多與來自不同背景的玩家們一起遊玩的機會，而在這之中，我們也發現了幾個在遊戲教學時頗能派上用場的訣竅。</p>
+
+<hr/>
+<h2>推銷它！</h2>
+<p class="NoIndent">
+	在你們開始遊戲前，你很可能會需要向你的新玩家們介紹這款遊戲（不要只是一股腦地把規則扔到他們臉上，這很不酷）。我們把這稱為推銷：向他們解釋為什麼你想要玩地城世界、以及為什麼你覺得他們會喜歡它。</p>
+<p>
+	首先也是最重要的一點：用你自己的話來說。我們沒有辦法為你提供講稿，畢竟，如果你想要激起其他人對這款遊戲的興趣，最好的方法就是誠懇地分享你自己對它的熱情。儘管如此，我們仍列出了一些你可能會想要提及的重點。</p>
+<p>
+	對第一次接觸角色扮演遊戲的玩家來說，最好專注於說明「角色扮演」對於地城世界的意義。告訴他們他們將會做些什麼（扮演自己的角色），以及你將會做些什麼（描繪出他們周遭的整個世界）。提一下遊戲大致的主軸（冒險者和冒險），然後，通常解釋一下規則在整個遊戲中的定位也是個不錯的做法：讓他們知道規則將如何以趣味十足的方式推進行為，讓故事發展下去。</p>
+<p>
+	對於曾經玩過角色扮演遊戲的玩家，特別是那些曾經玩過其他奇幻冒險遊戲的玩家而言，你可以更著重在地城世界與其他類似遊戲的不同之處：它的易玩性、規則在正確時機進場主導的模式、以及遊戲整體那快速緊湊的步調，這些都是有經驗的TRPG玩家們經常會讚賞的特色。</p>
+<p>
+	無論你的聽眾是誰，不要只推銷地城世界，也要記得推銷你將要主持的遊戲內容。如果你將要帶領他們經歷一場穿梭在城市下水道的旅程，提前告訴他們。如果冒險中有一個邪惡教團正等待著被阻止，那麼你也要把這部分加到你的敘述之中。如此一來，你、玩家、以及規則之間的交互作用將在稍後誕生出各式各樣有趣的秘密和驚喜；你的推銷之詞必須要能誠實地描繪出你將要帶領他們體驗的遊戲內容。</p>
+
+<hr/>
+<h2>列出所有職業 (Present the Classes)</h2>
 <p class="NoIndent">Once everybody’s on board for a game of Dungeon World and you’ve sat down to play start by presenting the character sheets. Give a short description of each, making sure to mention what each does and their place in the world. You can also read out the descriptions for each class, those all include something about both what the class does and how that fits into the big picture.</p>
 <p>If anybody has questions about the rules, answer them, but for now focus on describing what the classes do in plain terms. If someone asks about the fighter it’s more useful to tell them that the fighter has a signature weapon that’s one of a kind then to go into detail about how the signature weapon move works.</p>
-<h2>Create Characters</h2>
+
+<h2>創造角色</h2>
 <p class="NoIndent">Go through the character creation rules step by step. The process of creating a character is also a great introduction to the basic concepts: the players will encounter stats, moves, HP, and damage all in an order that makes sense. Don’t bother trying to frontload the rules explanations. There aren’t really any wrong choices.</p>
 <p>Each player will encounter the rules that are important to their class. The fighter, for example, will see moves about weapon ranges and piercing and ask about them, explain them as needed. If the fighter player doesn’t ask you what piercing is, don’t worry about it. They’re happy to choose based on the fiction, which is all the stats and tags reflect anyway.</p>
 <p>If your players are particularly worried about making their characters “right” just give them the option of changing them later. Trying to cover every rule and give them all the context now will just slow the game down. In particular, don’t go over the basic moves in detail yet. Leave them out so that the players can read them and ask questions, but don’t waste time by explaining each. They’ll come up as needed.</p>
 <p>As the players introduce their characters and start setting bonds move from answering questions to asking them. Ask about why they chose what they did and what that means for their character. Ask about details established by their bonds. Let their choices establish the world around them. Take special note of anything that you think you might be able to make moves with (like an estranged teacher or a simmering war).</p>
-<h3>Start Play</h3>
+
+<h3>開始遊玩</h3>
 <p class="NoIndent">Start play by concretely describing the world around them. Keep it brief and evocative, use plenty of details, and end with something that demands action. Then ask them what they do.</p>
 <p>Ending with something that demands action is important. Don’t presume that new players will already know what they want to do. Giving them something to react to right away means you get straight to playing.</p>
 <p>Especially for new players make sure that the action they’re thrown into is something they have the tools to deal with. A fight is a good choice, as is a tense negotiation (which can easily become a fight). Keep it simple and let the complexity build.</p>
 <p>Even in a fight keep to simple monsters: things that bleed, don’t have too much armor, and don’t have piercing. Give them a chance to get used to their armor and dealing damage before you start using the exceptions to those rules, like piercing and ignoring armor. Of course if the fiction dictates ignoring armor or piercing or a certain monster, use it, but don’t lead with those.</p>
 <p>For new players make liberal use of your Show Signs of an Approaching Threat move. New players, or those used to a different type of fantasy adventure, may have different assumptions about what’s lethal and when they’re in danger, so make sure to show them danger clearly. Once they’ve started to pick up on what’s dangerous you can give them a little less warning.</p>
 <p>If you’re GMing for the first time focus on a few moves: Show Signs of an Approaching Threat, Deal Damage, Put Someone in a Spot. Only look at your moves sheet if you’re pretty sure none of those three apply. Eventually you’ll build up familiarity with the whole range of GM moves and using them will seem like second nature.</p>
-<h3>Continuing Play</h3>
+
+<h3>繼續遊戲</h3>
 <p class="NoIndent">After an hour or two of play the players will likely have everything down. As a first time GM you may take a bit longer to pick up all your moves, maybe a session or two. Just roll with it.</p>
 <p>If you find yourself struggling in the first session consider it a pilot, like the first episode of a TV show. Feel free to start over or retroactively change things. If a player decides that the thief just isn’t what they thought it was let them switch classes (either remaking the same character or introducing someone new). If your first adventure wasn’t working too well scrap it and start something new.</p>
 <p>While Dungeon World works great for one-shots the longer cycles of levels and bonds don’t really kick in for a bit. If your first one or two sessions go well consider scheduling out enough time for 5–10 more. Knowing that you’re planning to play that much longer gives you some space to plan out your fronts and resolve them.</p>
