--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">附錄 <b class="caret"></b></a>
         <ul class="dropdown-menu">
            <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">冒險模組轉換</a></li>
-           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/teaching">進行教學</a></li>
-           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/npcs">NPCs</a></li>
+           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/teaching">遊戲教學</a></li>
+           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/npcs">速成NPC</a></li>
         </ul>
      </li>
    </li>
