--- a/appendices/teaching/index.html
+++ b/appendices/teaching/index.html
@@ -129,15 +129,21 @@
 	無論你的聽眾是誰，不要只推銷地城世界，也要記得推銷你將要主持的遊戲內容。如果你將要帶領他們經歷一場穿梭在城市下水道的旅程，提前告訴他們。如果冒險中有一個邪惡教團正等待著被阻止，那麼你也要把這部分加到你的敘述之中。如此一來，你、玩家、以及規則之間的交互作用將在稍後誕生出各式各樣有趣的秘密和驚喜；你的推銷之詞必須要能誠實地描繪出你將要帶領他們體驗的遊戲內容。</p>
 
 <hr/>
-<h2>列出所有職業 (Present the Classes)</h2>
-<p class="NoIndent">Once everybody’s on board for a game of Dungeon World and you’ve sat down to play start by presenting the character sheets. Give a short description of each, making sure to mention what each does and their place in the world. You can also read out the descriptions for each class, those all include something about both what the class does and how that fits into the big picture.</p>
-<p>If anybody has questions about the rules, answer them, but for now focus on describing what the classes do in plain terms. If someone asks about the fighter it’s more useful to tell them that the fighter has a signature weapon that’s one of a kind then to go into detail about how the signature weapon move works.</p>
+<h2>介紹職業</h2>
+<p class="NoIndent">
+	當所有人都預備好參與其中，你就可以坐下來帶領他們開始遊戲。從展示角色卡開始，為每個職業進行簡短的介紹，並確保你提及了他們各自擅長的領域、以及他們在這個世界的定位。你也可以選擇直接唸出職業卡上記載的說明文字，其中的內容就同時說明了各個職業會做的事、以及他們是如何融入整個世界所勾勒出的全局景象之中。</p>
+<p>
+	如果有任何人提出與規則有關的問題，回答他們，但現在還是先專注說明這些職業的功能，盡量使用直白易懂的詞句，避免使用難懂的規則術語。比如說，如果有人問起關於戰士的詳情，比起直接詳細解釋「招牌武器」這個動作的運作細節，不如簡單告訴他們「戰士擁有一個獨一無二的招牌武器」會更讓人容易理解。</p>
 
 <h2>創造角色</h2>
-<p class="NoIndent">Go through the character creation rules step by step. The process of creating a character is also a great introduction to the basic concepts: the players will encounter stats, moves, HP, and damage all in an order that makes sense. Don’t bother trying to frontload the rules explanations. There aren’t really any wrong choices.</p>
-<p>Each player will encounter the rules that are important to their class. The fighter, for example, will see moves about weapon ranges and piercing and ask about them, explain them as needed. If the fighter player doesn’t ask you what piercing is, don’t worry about it. They’re happy to choose based on the fiction, which is all the stats and tags reflect anyway.</p>
-<p>If your players are particularly worried about making their characters “right” just give them the option of changing them later. Trying to cover every rule and give them all the context now will just slow the game down. In particular, don’t go over the basic moves in detail yet. Leave them out so that the players can read them and ask questions, but don’t waste time by explaining each. They’ll come up as needed.</p>
-<p>As the players introduce their characters and start setting bonds move from answering questions to asking them. Ask about why they chose what they did and what that means for their character. Ask about details established by their bonds. Let their choices establish the world around them. Take special note of anything that you think you might be able to make moves with (like an estranged teacher or a simmering war).</p>
+<p class="NoIndent">
+	一步一步帶領他們走過角色創建相關的規則。角色創建的過程同時也能對整個遊戲的基本概念做一個很好的介紹：玩家們將會以一個合理的順序依序接觸到屬性數值、動作、生命值、和傷害。不用想著要提前解釋規則，放心，這個過程中不會有什麼真正的錯誤選項。</p>
+<p>
+	在角色創建的過程中，玩家們也將遭遇到許多與他們角色職業息息相關的規則問題。舉例來說，戰士將看到那些與武器作用範圍和<tag>穿透</tag>標籤有關的動作，並很有可能會詢問它們是什麼意思，若有必要的話，簡單解釋一下。就算選擇戰士職業的玩家沒有提問也不用擔心，他們可以盡情根據這些文字構築出的想像來進行選擇，而這也正是屬性數值和標籤反映出來的事實。</p>
+<p>
+	如果你的玩家們特別擔心他們沒辦法「正確的」創造出他們的角色，那麼你可以允許他們在之後再修改他們的角色數據。畢竟，如果你現在就要涵蓋到所有規則細節，把所有內容都告訴他們的話，那將大幅拖慢整個遊戲的節奏跟時間。尤其是，先不要詳細地說明關於基本動作的細節。把它們放到一旁，玩家們可以自行閱讀它們並提問，但先不要浪費時間逐條解釋。它們會在需要的時候再出現。</p>
+<p>
+	讓玩家們介紹他們的角色，並透過拋出提問、回答問題的過程來開始設定角色之間的羈絆。問他們為什麼選擇了這麼做，以及這些選擇對他們的角色有什麼樣的含意。針對他們建立起來的羈絆追問進一步的細節。讓他們的選擇構築起他們周遭的世界。特別記下任何你覺得能用來進行GM動作的有趣事物（像是一名被疏遠的老師、或是一場醞釀中的戰爭）。</p>
 
 <h3>開始遊玩</h3>
 <p class="NoIndent">Start play by concretely describing the world around them. Keep it brief and evocative, use plenty of details, and end with something that demands action. Then ask them what they do.</p>
