--- a/appendices/teaching/index.html
+++ b/appendices/teaching/index.html
@@ -146,17 +146,26 @@
 	讓玩家們介紹他們的角色，並透過拋出提問、回答問題的過程來開始設定角色之間的羈絆。問他們為什麼選擇了這麼做，以及這些選擇對他們的角色有什麼樣的含意。針對他們建立起來的羈絆追問進一步的細節。讓他們的選擇構築起他們周遭的世界。特別記下任何你覺得能用來進行GM動作的有趣事物（像是一名被疏遠的老師、或是一場醞釀中的戰爭）。</p>
 
 <h3>開始遊玩</h3>
-<p class="NoIndent">Start play by concretely describing the world around them. Keep it brief and evocative, use plenty of details, and end with something that demands action. Then ask them what they do.</p>
-<p>Ending with something that demands action is important. Don’t presume that new players will already know what they want to do. Giving them something to react to right away means you get straight to playing.</p>
-<p>Especially for new players make sure that the action they’re thrown into is something they have the tools to deal with. A fight is a good choice, as is a tense negotiation (which can easily become a fight). Keep it simple and let the complexity build.</p>
-<p>Even in a fight keep to simple monsters: things that bleed, don’t have too much armor, and don’t have piercing. Give them a chance to get used to their armor and dealing damage before you start using the exceptions to those rules, like piercing and ignoring armor. Of course if the fiction dictates ignoring armor or piercing or a certain monster, use it, but don’t lead with those.</p>
-<p>For new players make liberal use of your Show Signs of an Approaching Threat move. New players, or those used to a different type of fantasy adventure, may have different assumptions about what’s lethal and when they’re in danger, so make sure to show them danger clearly. Once they’ve started to pick up on what’s dangerous you can give them a little less warning.</p>
-<p>If you’re GMing for the first time focus on a few moves: Show Signs of an Approaching Threat, Deal Damage, Put Someone in a Spot. Only look at your moves sheet if you’re pretty sure none of those three apply. Eventually you’ll build up familiarity with the whole range of GM moves and using them will seem like second nature.</p>
+<p class="NoIndent">
+	你們的遊戲將從具體描述他們周遭的世界開始。讓你的詞句簡短而有畫面感，點綴大量的細節，並以某個需要立即行動的情境作結。接著，詢問他們打算做什麼。</p>
+<p>
+	「以某個需要立即行動的情境作結」這件事相當重要，不要假定新玩家會馬上就搞清楚自己想做什麼，讓他們面對某個需要立即反應的場景，這也同時意味著你可以直接切入重點並開始遊戲。</p>
+<p>
+	確保你推到他們面前的情境是他們有能力處理的，對於新玩家而言尤其如此。戰鬥是個不錯的選擇，一場劍拔弩張的談判（這很容易演變成一場戰鬥）也很不錯。以單純的情境起頭，並讓它隨著發展複雜化。</p>
+<p>
+	如果你選擇以戰鬥開場，也盡可能使用簡單的怪物：使用那些會流血受傷，沒有太多護甲，且沒有穿透標籤的怪物。讓玩家們在你開始使用那些例外規則之前（像是<tag>穿透</tag>和<tag>無視護甲</tag>標籤）有個機會可以正常地運用護甲並造成傷害。當然，如果故事中出現了某個會造成穿透或無視護甲的傷害、或出現了某種特定的怪物，你仍然可以正常使用它們，但不要刻意去營造這樣的情境。</p>
+<p>
+	在帶領新玩家時，大量運用你的「<b>顯現出一個迫近威脅的跡象</b>」動作。這是因為新玩家、或那些習慣其他奇幻冒險遊戲的玩家們，可能對於「什麼情況是致命的」或「什麼時候算是處於危險」會有不同的判斷標準，因此，確保你清楚明白地向他們展現出了危險的存在。當他們開始理解要怎麼判斷危險之後，你就可以漸漸減少警告的頻率。</p>
+<p>
+	如果你是第一次做為GM主持這個遊戲，那麼先試著專注於使用這幾個動作：<b>顯現出一個迫近威脅的跡象</b>、<b>造成傷害</b>、<b>讓某人陷入窘境</b>。只有在你差不多確定這三個動作都不適用於當下情境時，才去翻閱你的動作列表。最終，你會慢慢開始熟悉起所有的GM動作，並如呼吸般一樣自然地運用它們。</p>
 
 <h3>繼續遊戲</h3>
-<p class="NoIndent">After an hour or two of play the players will likely have everything down. As a first time GM you may take a bit longer to pick up all your moves, maybe a session or two. Just roll with it.</p>
-<p>If you find yourself struggling in the first session consider it a pilot, like the first episode of a TV show. Feel free to start over or retroactively change things. If a player decides that the thief just isn’t what they thought it was let them switch classes (either remaking the same character or introducing someone new). If your first adventure wasn’t working too well scrap it and start something new.</p>
-<p>While Dungeon World works great for one-shots the longer cycles of levels and bonds don’t really kick in for a bit. If your first one or two sessions go well consider scheduling out enough time for 5–10 more. Knowing that you’re planning to play that much longer gives you some space to plan out your fronts and resolve them.</p>
+<p class="NoIndent">
+	在遊玩一到二個小時之後，玩家們差不多就能掌握住所有他們需要知道的規則。而身為第一次主持遊戲的GM，你可能會需要再更久一些的時間，也許一到二次聚會，才能熟悉你所有的動作。不用擔心，隨遇而安吧。</p>
+<p>
+	如果你覺得自己苦苦糾結於不知該如何主持第一次聚會的內容，試著把它當成試播集，就像是電視影劇的第一集那樣。儘管放手去做，你可以讓它整個重新開始、或追溯更改過去建立的事實。如果某個玩家發現盜賊的角色定位與他們預期不符，就讓他們換成另一個職業（看是要把原本的角色重新改造、或是創建一個全新的角色）。如果你覺得你的第一場冒險表現不好，你也可以把它廢棄，然後重新開始一場新的冒險‧</p>
+<p>
+	儘管地城世界的機制相當適合單發團（單次聚會完結的冒險故事），但這麼一來那些針對高等級週期和羈絆的設計將沒辦法真正發揮作用。如果你前幾次的聚會進展順利，你可以考慮安排更多的時間來舉行 5-10 次以上的聚會。事前確定團務預估進行的時間，將幫助你更好地去規劃你的前置並解決它們。</p>
 
 
           </div>
