--- a/classes/immolator/index.html
+++ b/classes/immolator/index.html
@@ -216,7 +216,7 @@
 
 <div class="Move"><h3 class="MoveName">熾焰加倍燦爛 (Burns Twice as Bright)</h3>
 <p class="NoIndent">
-	當你引導命運之火時，你可以將一次失敗的擲骰結果視作7-9的結果、或將一次7-9的擲骰結果視作10+。這個效果可以用在你或其他角色進行的擲骰上。告訴GM你將因此失去什麼：一種情感、一段記憶、或某個你天生就永遠的事物。直到你進行 灼燃半減長息 動作之前，你都不能再次使用這個動作。</p></div>
+	當你引導命運之火時，你可以將一次失敗的擲骰結果視作7-9的結果、或將一次7-9的擲骰結果視作10+。這個效果可以用在你或其他角色進行的擲骰上。告訴GM你將因此失去什麼：一種情感、一段記憶、或某個你天生就擁有的事物。直到你進行 灼燃半減長息 動作之前，你都不能再次使用這個動作。</p></div>
 
 <div class="Move"><h3 class="MoveName">灼燃半減長息 (Burns Half as Long)</h3>
 <p>
