--- a/gm/advanced_delving/index.html
+++ b/gm/advanced_delving/index.html
@@ -132,19 +132,31 @@
 	你也永遠可以使用來自其他遊戲的動作。地城世界只不過是眾多使用動作機制的遊戲中的其中之一，而你也很有可能會受到這些其他遊戲的啟發。通常來說，要把另一個遊戲中的動作修改並用於地城世界並不是什麼太過困難的任務。</p>
 
 <h3>動作的類型 (Types of Moves)</h3>
-<p class="NoIndent">What role the move is fulfilling determines what kind of move you’re creating.</p>
-<p>Moves for dealing with the environment or special features you’ve added to Dungeon World are special moves. These moves are usually the GM’s domain, a place to make parts of the world stand out. Since moves are always triggered by the players, most moves like this should be written or printed somewhere everyone can look them over unless the move covers something that the player characters wouldn’t have any idea about.</p>
-<p>Moves that reflect some special competency or power, or something the players do, are usually class moves. If the move is clearly tied to a specific class, add it to that class. If the move is tied to some concept that multiple classes might have access to, like a move only accessible to those that have seen beyond Death’s Black Gates, you can create a compendium class for those moves. A compendium class is like a mini-class, it’s a collection of moves around a fictional theme. We’ll deal with them in more detail later.</p>
-<p>If your move is something the players do but isn’t associated with any specific theme or class it’s probably a basic or special move. If it comes up all the time it’s a basic move, if it comes up more rarely it’s a special move.</p>
-<p>Moves made by the players in response to monsters, such as the effects of a disease or pressing on despite a focused blast of wind from an air elemental, are player moves associated with that monster. Player moves associated with a monster are fairly rare, most of the ways a player will interact with a monster are covered by the basic and class moves.</p>
-<p>Moves made by monsters against the players aren’t player moves at all. They’re monster moves, simple statements of what the monster does. Trying to make every monster move into a player move will seriously hamper your creativity.</p>
+<p class="NoIndent">
+	動作所要滿足的目的將決定它所屬的動作類型。</p>
+<p>
+	用來處理周遭環境或你為地城世界所添加特色的動作屬於<b>特殊動作</b>。這些動作通常屬於GM的領域，用來讓這個世界中的某些部分脫穎而出。由於動作永遠是由玩家們的行動所觸發，因此，除非這個動作涵蓋了某個玩家角色們尚一無所知的情報，否則大部分這類動作都應該被清楚寫下或印出，並放在所有人都能看到的地方。</p>
+<p>
+	反映特殊資格、能力、以及玩家們所能採取舉動的動作，通常會被歸類為<b>職業動作</b>。假如該動作明顯與某個特定職業有關，將它添加到該職業中。如果該動作關聯於某個特定概念且不只一個職業能使用它的話（比如說只有曾經親眼見過死國黑門彼端的角色），則你可以為這些動作創造一個「<b>概略職業</b>」。概略職業就像是一個縮小版的職業模板，並涵蓋了數個圍繞相同故事主題的動作。我們會在稍後的章節再解釋。</p>
+<p>
+	如果你創造的動作是某個玩家們會去做，但與任何特定主題或職業無關的話，那它可能會是一個基本動作、也可能會是個特殊動作。若它它經常發生，那它就是基本動作。若它發生的頻率不高，那麼它就是個特殊動作。</p>
+<p>
+	那些玩家們採取以回應怪物的動作，像是對抗疾病的效果、或是不顧氣元素帶起的洶湧風壓而往前推進等等，都是與該怪物相關的玩家動作。關聯於特定怪物的玩家動作相當罕見，因為大部分玩家們與怪物互動的行為都已經被既有的基本動作和職業動作所概括。</p>
+<p>
+	至於那些怪物用以對抗玩家們而進行的動作則根本不是玩家動作。它們是怪物動作，用簡短的句子描述了怪物會採取的行動。不要嘗試把怪物動作寫成玩家動作的格式，這會大大阻礙你使用它們的創造力。</p>
 
 <h3>世界動作 (World Moves)</h3>
-<p class="NoIndent">Your Dungeon World is full of fantastic things, right? You’re likely to find that some of those fantastic things deserve or demand custom moves to reflect exactly what they do. Consider this one from Chris Bennet:</p>
-<p class="MoveFirstLine">When you <strong>open a sewer hatch</strong>, roll+STR: ✴On a 10+, choose 2. ✴On a 7–9 choose 1.</p>
-<ul><li class="li">You avoid being covered in feces and rotting animal entrails from the sewers above.</li>
-<li class="li">You avoid having a gelatinous cube land on you.</li>
-<li class="Lastli">You find a secret back entrance to where the merchant’s daughter is being held.</li></ul>
+<p class="NoIndent">
+	你的地城世界到處都充滿著美妙的奇幻事物，對吧？有時候，你可能會發現其中的某些事物需要或值得你為其設計一個自訂動作，來反映出它們的實際功能。參考克里斯．班奈特(Chris Bennet) 撰寫的這個動作：</p>
+<div class="Move">
+<p class="NoIndent">當你<strong>從開啟下水道的人孔蓋</strong>時，擲+力量。<br/>
+	✴擲出10+時，選擇 2 項。<br/>
+	✴擲出7-9時，選擇 1 項。<br/></p>
+<ul>
+	<li class="li">你免於被下水道上方的汙糞和腐爛動物內臟所掩蓋。</li>
+	<li class="li">你避開了被埋伏的凝膠方塊落到身上的命運﹐</li>
+<li class="Lastli">你發現了一條秘密後門，通往商人愛女被囚禁的地方。</li></ul>
+</div>
 <p>This move is strong because it is tied strongly to a particular place at a particular time. This move was written by request for Jason Morningstar’s Dungeon World game as the players entered some particularly horrible sewers to find a powerful merchant’s daughter. Two of the options here are very directly tied to that precise situation.</p>
 <p>Why would you write this move instead of just using defy danger? You wouldn’t, always. Opening a pressurized sewer hatch is certainly dangerous, you could use defy danger. This move does have the advantage of setting up the choices ahead of time. This is actually a very strong technique: if there’s a particular situation that is likely to cause defy danger, you can write a custom move that describes the tough choice to be made to save yourself some thinking in the moment.</p>
 <p>The other strength of moves like this is they call out something as important. By making the trigger “when you open a sewer hatch” instead of “when you act despite an imminent threat” the move calls out that these sewers are always dangerous.</p>
