--- a/gm/advanced_delving/index.html
+++ b/gm/advanced_delving/index.html
@@ -149,24 +149,37 @@
 <p class="NoIndent">
 	你的地城世界到處都充滿著美妙的奇幻事物，對吧？有時候，你可能會發現其中的某些事物需要或值得你為其設計一個自訂動作，來反映出它們的實際功能。參考克里斯．班奈特(Chris Bennet) 撰寫的這個動作：</p>
 <div class="Move">
-<p class="NoIndent">當你<strong>從開啟下水道的人孔蓋</strong>時，擲+力量。<br/>
+<p class="NoIndent">當你<strong>開啟下水道的人孔蓋</strong>時，擲+力量。<br/>
 	✴擲出10+時，選擇 2 項。<br/>
 	✴擲出7-9時，選擇 1 項。<br/></p>
 <ul>
 	<li class="li">你免於被下水道上方的汙糞和腐爛動物內臟所掩蓋。</li>
 	<li class="li">你避開了被埋伏的凝膠方塊落到身上的命運﹐</li>
-<li class="Lastli">你發現了一條秘密後門，通往商人愛女被囚禁的地方。</li></ul>
+	<li class="li">你發現了一條秘密後門，通往商人愛女被囚禁的地方。</li></ul>
 </div>
-<p>This move is strong because it is tied strongly to a particular place at a particular time. This move was written by request for Jason Morningstar’s Dungeon World game as the players entered some particularly horrible sewers to find a powerful merchant’s daughter. Two of the options here are very directly tied to that precise situation.</p>
-<p>Why would you write this move instead of just using defy danger? You wouldn’t, always. Opening a pressurized sewer hatch is certainly dangerous, you could use defy danger. This move does have the advantage of setting up the choices ahead of time. This is actually a very strong technique: if there’s a particular situation that is likely to cause defy danger, you can write a custom move that describes the tough choice to be made to save yourself some thinking in the moment.</p>
-<p>The other strength of moves like this is they call out something as important. By making the trigger “when you open a sewer hatch” instead of “when you act despite an imminent threat” the move calls out that these sewers are always dangerous.</p>
+<p>
+	這是個相當強大的動作，因為它強烈地緊繫著某個在特定時間的特定地點。這個動作是為了滿足詹森．莫寧斯塔的地城世界遊戲而撰寫的，並在玩家們為了追尋位高權重商人的愛女的下落時而進入某個特別駭人的下水道時所使用。這個動作的其中兩個選項更是直接指向了確切的實際情境。</p>
+<p>
+	那麼，為什麼你會需要撰寫這個這個動作，而不直接使用面對危險這個基本動作就好呢？事實上，你確實可以不用這麼做。推開密封加壓的下水道蓋確實是個危險，而你也確實可以使用面對危險動作來處理。然而，撰寫這個動作的好處在於，它可以在事前就幫助你設定好關於後續結果的選項。這是個相當強大的技巧：如果存在某個很可能會導致觸發面對危險動作的特定情境，那麼你就可以為它編寫一個自訂動作並事先描繪玩家們所要做出的艱難抉擇，以節省你在當下的思考時間。</p>
+<p>
+	這類動作的另一個強項，在於它可以用來強調某個重要的事物。透過把觸發條件從「當你在迫在眉睫的威脅之下採取行動」改成「當你開啟下水道的人孔蓋」，這個動作強掉了這些下水道的出入口總是充滿了危機。</p>
 
 <h3>職業動作 (Class Moves)</h3>
-<p class="NoIndent">Each class has enough moves to take it through tenth level but that doesn’t mean you can’t add more. Adding moves to a class can demonstrate your idea of Dungeon World. Take this one, for example:</p>
-<p class="MoveOneLine">When you <strong>claim a room for your deity</strong>, mark every entrance and roll+WIS: ✴On a 10+, the room is peacebonded: no one can take action to cause physical harm within it. ✴On a 7–9, the room is peacebonded, but the show of divine power draws attention. You can dismiss the peacebond as you see fit.</p>
-<p class="NoIndent">This move presents a slightly different side of Dungeon World, one that can demand peace (something that usually doesn’t come easily to PCs). This may not be right for every Dungeon World game, but it’s a great way to show how your Dungeon World looks, reflected in the characters.</p>
-<p>When adding a move, look carefully at what class it belongs to. Avoid giving a class moves that infringe on another class’s areas of expertise. If the thief can cast spells just as well as the wizard the wizard is likely to feel marginalized. This is why the multiclass moves act as one level lower, so that each class’s niche is somewhat protected.</p>
-<p>Be careful with any move that provides the same benefit as an existing move even if the trigger is different. Moves that add to damage, in particular, should be avoided for the most part unless carefully crafted with interesting triggers. The same is true of moves that add to armor. The classes at present have damage and armor increases that reflect the overall danger of Dungeon World. Giving them more can negate potential threats.</p>
+<p class="NoIndent">
+	每個職業都有著數量足夠他們一路升到十級的職業動作，但這並不代表你不能添加更多的職業動作進去。透過添加新的職業動作，你能夠展現出你對地城世界的想法。舉下列這個動作為例：</p>
+<div class="Move">
+<p class="NoIndent">
+	當你<strong>宣言你的神祇已經掌管這個房間</strong>時，在所有出入口留下印記，並擲+睿知。<br/>
+	✴擲出10+時，這個房間被和平之誓所約束：沒有任何人可以在之中採取會造成物理傷害的行為。<br/>
+	✴擲出7-9時，這個房間被和平之誓所約束，但神性能量的出現將吸引到不必要的注意。<br/>
+	你可以在任何你覺得合適的時機解消這個和平之誓。</p>
+</div>
+<p class="NoIndent">
+	這個動作呈現出了地城世界那略為不同的另一面：能夠強制要求和平降臨的那一面（這對玩家角色們而言通常是個得來不易的情境）。也許這個動作並不適合所有的地城世界遊戲，但這可說是讓你能展現出屬於你地城世界獨特風貌，並將其反映在角色身上的絕佳手段。</p>
+<p>
+	當你準備添加新的職業動作時，謹慎地確認這個動作屬於哪個職業。注意不要寫出一個會侵犯到其他職業專業領域的職業動作。想想看，如果盜賊能像法師一樣施展法術，那麼法師就很可能會感到自己被邊緣化。這也是為什麼兼職動作會要你把自己的等級視為比原本低一級，如此一來每個職業的地位才能得到某種程度上的保障。</p>
+<p>
+	小心處理那些能發揮與現有動作相同效果的動作，即使它們的觸發條件不同也是如此。此外，除非有著被精心設計的有趣觸發情境，否則那些能夠增加傷害的動作在大部分情況下也都應該被避免。同樣的原則也適用於那些能增加護甲的動作。那些有著提升傷害和護甲能力的現存職業已經恰當地反映出了整個地城世界的危險程度，若貿然增加它們，則這些潛在的威脅就很可能會因此被消除掉。</p>
 <hr/>
 
 <h2>新的職業 (New Classes)</h2>
