--- a/gm/advanced_delving/index.html
+++ b/gm/advanced_delving/index.html
@@ -117,11 +117,11 @@
 	地城世界描繪了一種特定風貌的奇幻冒險── 一個有著精靈和矮人、英雄和惡棍、以及在地城世界中為財富和榮耀掙扎奮鬥的人們的冒險故事。然而，你也許會有一些不太一樣的想法：或許你的地城世界想要設定在一個飽經摧殘的沙漠星球，遍布著野蠻的食人部落，且被傲慢的靈能者給統治著。又或許，你想要遊玩的故事中只有人類是唯一可選的種族，然而分屬不同部落或家族的他們，彼此之間的差異就跟地侏跟矮人之間的差異一樣大。只要稍微動點手腳，這一切皆有可能（而且實際上，我們鼓勵你這麼做）。這個章節將說明你該如何把地城世界變成<strong>屬於你的</strong>地城世界。</p>
 <hr/>
 
-<h2>創造動作 (Making Moves)</h2>
+<h2>編寫新的動作</h2>
 <p class="NoIndent">
 	要踏上你改寫地城世界的旅程，最好的開頭就是從動作下手。許多前置、危害、或其他遊戲中的元素原本就會包括自訂動作的項目，因此這是個相對較為自然且容易著手的地方。你可能會想要創造出某個動作來反映某些特定威脅的效果（「當你獨自走進褻瀆不潔的廳堂時……」）、也可能會想創造出一些能夠涵蓋你設定中特別重要事物的動作（「當你在黑暗之水中游泳時……」）。而隨著你的經驗越發豐富，你甚至可能會想編寫一些動作來擴展某個職業的能力、或者從頭打造一個屬於你自己的新職業。</p>
 
-<h3>開始入門 (Getting Started)</h3>
+<h3>開始入門</h3>
 <p class="NoIndent">
 	動作是怎麼來的？嗯，或許你可以從動作的觸發條件開始著手。有些行為舉止本身就是會讓你覺得它應該要是一個動作，而這也是在創造動作時最為常見的起始點。你將會預見某些行動出現在故事中，並感覺到它與已經存在的其他動作之間有足夠大的差異性，以至於它需要一個屬於它自己的規則來進行處理。</p>
 <p>
@@ -131,7 +131,7 @@
 <p>
 	你也永遠可以使用來自其他遊戲的動作。地城世界只不過是眾多使用動作機制的遊戲中的其中之一，而你也很有可能會受到這些其他遊戲的啟發。通常來說，要把另一個遊戲中的動作修改並用於地城世界並不是什麼太過困難的任務。</p>
 
-<h3>動作的類型 (Types of Moves)</h3>
+<h3>動作的類型</h3>
 <p class="NoIndent">
 	動作所要滿足的目的將決定它所屬的動作類型。</p>
 <p>
@@ -182,28 +182,47 @@
 	小心處理那些能發揮與現有動作相同效果的動作，即使它們的觸發條件不同也是如此。此外，除非有著被精心設計的有趣觸發情境，否則那些能夠增加傷害的動作在大部分情況下也都應該被避免。同樣的原則也適用於那些能增加護甲的動作。那些有著提升傷害和護甲能力的現存職業已經恰當地反映出了整個地城世界的危險程度，若貿然增加它們，則這些潛在的威脅就很可能會因此被消除掉。</p>
 <hr/>
 
-<h2>新的職業 (New Classes)</h2>
-<p class="NoIndent">Once you’ve gotten your feet wet creating new moves and customizing the classes in Dungeon World, you’ll likely notice something. A class is just a collection of themed moves that work together to create a certain set of abilities and qualities that give the class their unique feel. If you’re up for it, creating a new class is the next natural step along the way.</p>
-<p>Your first consideration should be how the class relates to the existing classes. No character exists in isolation, so you should think carefully about why this class is different.</p>
-<p>An excellent first step to creating a new class is to think about what fictional characters you’d like to take inspiration from. Don’t slavishly follow what that fictional character can do (after all, they weren’t in Dungeon World) but use them as a guide for what’s so cool about that character.</p>
-<p>The inspirations for the classes in this book are fairly clear, and made clearer by the notes in the margins. Note that not every inspiration is taken entirely: the wizards of Discworld inspired the slightly pompous style of the wizard, but the wizard is far more competent and casts spells more like a wizard from Vance’s Dying Earth. The inspiration is one of style, not an attempt to recreate what a certain character could do in a certain book.</p>
-<p>With a clear idea in mind you have a few basic steps that aren’t a concern when writing single moves: HP, Bonds, Look, equipment, alignment, races.</p>
-<p>A class’s HP is some base+Constitution. Base HP is almost always 4, 6, 8, or 10. Having more HP than the fighter and paladin will take the spotlight away from those characters unless you’re careful. Having less HP than the wizard is probably character suicide. 4 base HP makes for a class that is deliberately fragile, they’ll need help from others when the swords come out. 6 base HP is for classes that aren’t ready to fight, but can at least take a hit. 8 base HP is enough to take some hits and get into combat a little, while 10 base HP is for skilled warriors and those who have no fear of battle.</p>
-<p>Damage is chosen from the dice available: d4, d6, d8, d10. The classes presented here all use a single die with no static bonus, but there’s no reason not to experiment with other options: 2d4 or 1d6+2, for example. High HP and damage tend to go together, but your new class could be a pacifistic brick wall or a glass cannon—fragile but dangerous.</p>
-<p>Alignments show the starting outlook of the class. Most classes will have Neutral as an option, since only the most dedicated classes are so tied up to an ideal that the self can’t come first. A good alignment move is something that happens with some regularity and guides the player to a particular type of action they might not otherwise consider. An alignment that happens as part of the normal course of play, like “When you gain treasure…,” doesn’t really show the character’s ideals. Adding some requirements, maybe “When you gain treasure through lies and deceit…,” adds an element of ideals. Now the alignment says something about the character (they prize pulling a con on the unsuspecting) and requires the player to think about how they play. Alignment is a telling fact about the class in the world, too. Everyone knows that paladins are supposed to be paragons of Good and Law, right?</p>
-<p>Bonds are where the class’ outlook shines through. It’s the place where you, the designer, will most clearly interact with the player at character creation. Unless the class is particularly social or antisocial, write four bonds. If the class is very connected to others, add a bond; if they’re cloistered, remove one. Avoid bonds that dictate a moral or ethical stance but do think about how your class interacts with their allies—the thief steals things but helps protect the party from traps, the fighter defends his allies and kills monsters that might harm them, the wizard knows secret knowledge and shares or hoards it. You can use the rules for writing new bonds as a starting point, but avoid including proper names in starting bonds.</p>
-<p>Look is largely left to your imagination. This is an excellent spot to think about your fictional inspiration. What did they look like? How could they look different? Including at least one choice about clothes helps establish style without making the player think about buying clothes.</p>
-<p>The equipment choices should always include at least one weapon option and one armor option unless the class is clearly lacking in fighting skill. Dungeon rations are also pretty much required; a starting character without food going into a dangerous area borders on stupid.</p>
+<h2>新的職業</h2>
+<p class="NoIndent">
+	當你差不多熟悉了該如何編寫新的動作、並客製化地城世界中的職業之後，你可能會開始注意到一些事情。所謂的職業實際上不過就是數個動作的集合，它們圍繞同一個主題，並共同打造出了一系列的能力和特性，使職業能夠展現出各自的獨特面貌。如果你已經準備好，那麼創造新的職業自然就會是你深入鑽研的下一個步驟。</p>
+<p>
+	首先你必須考量的是這個新職業與現有職業之間的關聯。沒有任何角色會單獨一人踏上冒險，因此你需要仔細思考：為什麼這個職業與其他職業有所不同？</p>
+<p>
+	創造新職業的其中一個絕佳起點，就是先好好思考你想要從哪一個故事人物汲取創作的靈感。不要盲目抄寫這位故事人物所能做到的所有事情（畢竟他們並不是活在地城世界的角色），而是把他們做為參考，擷取出這名角色的強項以及酷炫特色。</p>
+<p>
+	本書中那些基礎職業的靈感來源都相當明確，且透過邊欄記載的說明被更進一步闡明。然而要注意的是，並不是每個靈感來源都會被完整套用進來：舉例來說，《碟形世界(Discworld)》中的魔法師啟發了法師那略顯浮華的風格，但地城世界中的法師卻遠比他們要更有能力許多，並能夠像傑克．萬斯筆下《垂死的地球(Dying Earth)》中的魔法師一樣施放法術。靈感是用來帶出職業的風格，而不是讓你嘗試再現出某本書中某個特定角色的能力。</p>
+<p>
+	當你心中有了一個明確的想法，你接著需要走過幾個基本步驟：決定你的生命值、羈絆、外觀、裝備、陣營、和種族。它們在你編寫單一動作時並不是特別需要考慮的項目，但會大大影響職業給人的印象。</p>
+<p>
+	職業的 生命值 等同於基礎生命值+體質值。基礎生命值幾乎永遠會是 4、6、8、或 10 這幾個數字。除非你足夠謹慎，否則讓新職業擁有比戰士和聖武士更充裕的生命值會很容易搶走這些角色們的聚光燈；而讓新職業擁有比法師更少的生命值則無異於自殺。基礎生命值為 4 的職業可說是異常脆弱，當刀劍出鞘之時，他們會特別需要來自其他人的協助。基礎生命值為 6 的職業並未做好戰鬥的準備，但他們至少能夠承受一些傷害。基礎生命值為 8 的職業足以承受好幾次的打擊，並能夠稍微涉入戰場；而基礎生命值為 10 的職業則會是技巧純熟的戰士和那些完全無懼於戰場險惡的勇者。</p>
+<p>
+	職業的 傷害骰 從下列骰子中選擇：d4, d6, d8, d10。本書中列出的職業全都只使用一顆沒有附帶其他固定加值的骰子做為基礎傷害，但你沒有理由不試試使用其他的選項，像是 2d4 或 1d6+2。生命值較高的職業通常會伴隨著較高的傷害，但你的新職業也可以是一面奉行和平主義的磚牆、或者一台玻璃大砲──脆弱但危險十足。</p>
+<p>
+	陣營 展示了這個職業一開始對事物的看法。大部分的職業都會把「中立」作為陣營選項，畢竟只有那些最狂熱的職業，會因為全神投入於其理想而不把自我放在第一順位。一個好的陣營動作會規律性地發生，並能引導玩家們去執行某項他們原本不會考慮的行動。然而，一個會在尋常遊戲過程中簡單被觸發的陣營動作，像是「當你獲得財富時……」並不能真正展現出角色所懷抱的道德理想。加上一些條件，一些要求，比如說「當你透過謊言和欺詐來獲得財富時……」，就能為這個動作添加一些關於陣營的要素。如此一來，這個陣營動作就描繪出了一些關於角色的事實（它鼓勵角色欺騙不知情的人），並要求玩家們去思考該如何扮演它們。陣營同時也反映出了職業在這個世界上的事實：所有人都知道聖武士就應該要是善良和秩序的典範，對吧？</p>
+<p>
+	羈絆 是職業的亮點所在。它會是你，作為設計者，在角色創建階段時與玩家有著最多互動的環節。除非這個職業有特別強的社交能力或特別反社會化，否則為職業撰寫四個羈絆即可。若這個職業與他人的關係緊密，那麼追加一個羈絆；若該職業與世隔絕，則減少一個羈絆。避免撰寫那些具有道德或倫理立場的羈絆，但務必思考一下這個職業會如何與他的隊友們互動──盜賊會出手行竊，但也會保護整個隊伍不受陷阱所害；戰士站在前線守護著他的隊友們，並屠殺可能會傷害他們的怪物；法師知曉隱密的奧秘學識，並可能將之分享出去或藏入懷中。你可以使用撰寫新羈絆的規則做為你的起跑點，但避免在起始羈絆中提到任何專有名稱。</p>
+<p>
+	外觀 大部分都是留給你想像的。這是個用來思考關於你創作靈感的項目：他們長什麼樣子？他們彼此的外觀能有什麼樣的不同？把至少一個關於服裝的選項納入外觀中，可以幫助玩家們輕易建立起角色印象，而不用再煩惱如何穿搭。</p>
+<p>
+	起始裝備的選項永遠應該包含至少一組武器選項和一組防具選項，除非該職業很明顯缺乏戰鬥的技術。地城口糧也是非常必要的；一個未攜帶任何食物就闖入危險區域的初始角色可說是魯莽到近乎愚蠢了。</p>
+
 <h3>概略職業 (Compendium Classes)</h3>
-<p class="NoIndent">A compendium class is a class only available to higher level characters who meet specific requirements. They’re called compendium classes because they first appeared in the Compendiums for Dungeon World Basic. A compendium class is the way to go for a concept that can be layered onto multiple other classes.</p>
-<p>The basic structure of a compendium class is to have a starting move that is available only to characters who have had a certain experience, like this:</p>
+<p class="NoIndent">
+	概略職業是一種只有達成了特定條件的高等角色才能成為的職業。之所以稱其為「概略職業」是因為它們最早是出現在《地城世界基礎概略手冊》。概略職業提供了一種手段，讓你實現某個能夠被疊加到其他複數職業上的概念。</p>
+<p>
+	概略職業的基本結構為一個起始動作，且該起始動作只有在角色經歷了某種特定經歷後才能夠被使用，如下所示：</p>
 <div class="Move">
-<p class="NoIndent">When you enter the bodily presence of a god or their avatar the next time you gain a level you can choose this move instead of a move from your class:</p>
-<h4 class="BasicMoveName">神聖羈絆 (Divine Bond)</h4>
-<p class="MoveLastLine">When you write a new bond, instead of using the name of another character you can use the name of a deity you’ve had contact with. Anytime a bond with a deity applies to the current situation you can mark it off (as if it was resolved) to call on the deity’s favor in a clear and decisive way that the GM describes. At the end of the session you then replace the marked off bond with a new one, with a deity or player character.</p></div>
-<p class="NoIndent">Note that the move is only available after the character has done a specific thing, and even then only at their next level. Compendium classes are best when they rely on what the character has done, not stat prerequisites or anything that happens without the player’s action. A compendium class that is available to anyone who just gained 5th level doesn’t stand for much; one that only applies if you’ve been to Death’s Black Gates and lived to tell the tale is more interesting.</p>
-<p>A compendium class also usually has 2–3 moves that can be taken only if the starting move is taken. These are just like normal class moves, just with the requirement that you have to have already taken the starting compendium class move.</p>
-<p>Compendium classes are ideal for concepts that don’t quite inspire a full class. If you can’t think of what the class looks like or how much HP it has, or if the class overlaps with existing classes, it’s probably better as a compendium class.</p>
+<p class="NoIndent">
+	當你<b>進入神明或其化身實體的同在</b>，則在你下次升級時，你可以改為選擇這個動作來取代你原本職業的進階動作：</p>
+<h4 class="BasicMoveName" style="color:#000">神聖羈絆 (Divine Bond)</h4>
+<p class="MoveLastLine">
+	當你撰寫新的羈絆時，你可以改為使用與你同在的神祇的名字來填寫羈絆，而非使用其他角色的名字。任何時候，當這個與神祇之間的羈絆能夠適用於當下情境時，你可以將其劃掉（視作被解決）以呼求神祇的支援，這個支援的方式將由GM描述，並以一種清晰且果斷的方式呈現。在該次聚會結束時，你將如常把這個被劃掉的羈絆換成新的羈絆，並可以再次選擇要使用該神祇的名字、或是其他玩家角色的名字。</p></div>
+<p class="NoIndent">
+	要注意，這個動作只有在角色完成了某個特定的事蹟之後，且只有在他們下次升級時才能夠被角色獲得並使用。概略職業最適合用來處理那些先決條件依賴於角色們達成的事蹟，而非單純確認屬性值是否滿足、或任何不涉及玩家行動的事物。一個所有剛升上 5 級的角色都可以輕易獲得的概略職業並不能代表什麼；而一個只有在親眼見證死國黑門彼端並活著回來訴說見聞才能獲得的概略職業，就顯得有趣許多。</p>
+<p>
+	一個概略職業通常還會有著 2-3 個只有在獲得起始動作後才能接著獲得的動作。這些動作就跟正常的職業動作一樣，只不過它們的先決條件是你必須要先擁有該概略動作的起始動作。</p>
+<p>
+	對於那些不足以形成完整職業的靈感而言，概略職業會是一個相當理想的載體。如果你想不到這個職業會長什麼樣子、它該有多少生命值、或這個職業是否會與其他既存的職業重疊，那麼或許它會更適合以概略職業的形式呈現。</p>
 <hr/>
 
 <h2>冒險動作 (Adventure Moves)</h2>
